# web_docs

./: .gitignore  README.md  copy_node.js  index.html  journal_abbe_combe_test.html  package-lock.json  package.json  rollup.config.mjs  sea-config.json  vite.config.ts
.github/workflows/: publish.yaml
pagedjs-cli/: package-lock.json  rollup.config.js
public/: paged_interface.css
src/: App.jsx  App.tsx  App2.tsx  Editor.jsx  JoditEditor.jsx  Layout.jsx  config.js  main.js  openfile.js  theme.js
src-tauri/: Cargo.toml  foo.html  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: http_server.rs  main.rs
src/editors/Editoria/config/: config.js  configMobile.js
src/editors/HHMI/: HHMI.js
src/editors/HHMI/config/: config.js
src/editors/OEN/config/: config.js
src/editors/WebDocs/: index.js
src/editors/WebDocs/config/: config.js
src/editors/WebDocs/layout/: Layout.js
src/plugins/: file.js  iframe_sandbox.js  index.js  paged.js
web_server/: Cargo.toml  README.md  package.json
web_server/examples/tauri-app/: package.json
web_server/examples/tauri-app/src/: App.svelte
web_server/examples/tauri-app/src-tauri/: Cargo.toml
web_server/examples/tauri-app/src-tauri/capabilities/: default.json
web_server/examples/tauri-app/src-tauri/src/: lib.rs
web_server/guest-js/: index.ts
web_server/permissions/: default.toml
web_server/permissions/autogenerated/: reference.md
web_server/permissions/schemas/: schema.json
web_server/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
