[package]
name = "tauri-plugin-web-server"
version = "0.0.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-web-server"

[dependencies]
tauri = { version = "2.0.0-beta.23", features = ["devtools"] }
serde = "1.0"
thiserror = "1.0"
# actix-web = "4"
tiny_http = "0.12"
http = "1"
# hyper = { version = "1", features = ["full"] }
# tokio = { version = "1", features = ["full"] }
# http-body-util = "0.1"
# hyper-util = { version = "0.1", features = ["full"] }
serde_json = "1.0"

[build-dependencies]
tauri-plugin = { version = "2.0.0-beta.18", features = ["build"] }
